notes app - add detail,update, delete views

--- a/notes/app_notes/templates/app_notes/note_detail.html
+++ b/notes/app_notes/templates/app_notes/note_detail.html
@@ -29,6 +29,7 @@
             {% trans 'Created at' %}: {{ note.updated_at }}
         </p>
         <a href="{% url 'note:note_update' note.pk %}">{% trans 'Edit' %}</a>
+         <a href="{% url 'note:note_delete' note.pk %}">{% trans 'Delete' %}</a>
     </div>
 </div>
 {% endblock %}
